# gemma-adaptive-tutor

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  NOTICE  PLAN.md  README.md  TASKS.md  docker-compose.yml  entrypoint.sh  justfile  map_accelerator.db  prototype_fonts.html  prototype_report.html  prototype_ui.html  pyproject.toml
.claude/rules/: python-style.md
docs/: architecture.md  backlog.md  log-diagnostics.md  nwea_2025_norms_analysis.md
docs/competition/: description.md  evaluation.md  submissions-requirements.md
docs/plans/: cache-student-analysis.md  delete_student.md  enrich-report-with-practice-scores.md  exercise-handler-refactor.md  image-score-extraction.md  kid-friendly-ui-redesign.md  map-style-question-formats.md  multi-subject-support.md  nwea_2025_norms_analysis.md  practice-tab-map-styling.md
docs/story/: narrative.md  writeup-draft.md
frontend/: __main__.py  app.py
resources/: nwea-map
src/: constants.py  prompts.py
src/api/: main.py
src/data/: rit_to_concept_math_2plus.json  rit_to_concept_reading_2plus.json  rit_to_concept_science_2plus.json
src/models/: database.py  schemas.py
src/tools/: curriculum.py  exercise_generator.py  score_extractor.py  student_progress.py
