[project]
name = "map-accelerator"
version = "0.1.0"
description = "Gemma 4-powered adaptive tutor for advanced students using MAP/NWEA scores"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0",
    "ollama>=0.4.0",
    "gradio>=5.0.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "matplotlib>=3.10.8",
    "pymupdf>=1.27.2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
